updated image, switched sidebar back to right side, I cannot get the position:relative to just go away and that solves the mobile issue...for now moved back, removed debug js as it bogged it down too much too.

--- a/app/assets/stylesheets/MirrorDraw.css.scss
+++ b/app/assets/stylesheets/MirrorDraw.css.scss
@@ -45,6 +45,8 @@ select{
 	width: auto !important;
 }
 
-#left_sidebar {
-	float:left;
+#right_sidebar {
+	float: right;
+	right:20px;
+	
 }
